--- a/watcher/vmchain-watcher-node/package.json
+++ b/watcher/vmchain-watcher-node/package.json
@@ -12,7 +12,9 @@
     "egg-cors": "^2.2.3",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
-    "request": "^2.88.2"
+    "ethers": "^5.5.3",
+    "request": "^2.88.2",
+    "zksync": "^0.11.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
