--- a/watcher/vmchain-watcher-node/package.json
+++ b/watcher/vmchain-watcher-node/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "egg-scripts start --port=7011 --title=egg-server-",
     "stop": "egg-scripts stop --title=egg-server-",
-    "dev": "egg-bin dev",
+    "dev": "egg-bin --port=7011 dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
