--- a/watcher/watcher-core/pom.xml
+++ b/watcher/watcher-core/pom.xml
@@ -191,5 +191,11 @@
             <artifactId>bolt-servlet</artifactId>
             <version>1.16.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>ai.everylink</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
